--- a/Index.html
+++ b/Index.html
@@ -3661,8 +3661,8 @@
                         <div class="site_titel">Официальный сайт проекта</div>
                         <div class="site_link link"><a class="link" href="http://rdmr.ru">RDMR.RU</a></div>
                         <div class="group_titel"> Группа создателей cайта</div>
-                        <div class="group_link link"><a class="link" href="https://vk.com/clubkannn">KANTIK &amp; AJlekcaHDp || MTA</a></div>
-                        <div class="serverone">Карта сделана по информации c сервера Radmir MTA  #1</div>               
+                        <div class="group_link link"><a class="link" href="https://vk.com/clubkannn"> &amp;  || MTA</a></div>
+                        <div class="serverone">Карта сделана по информации c сервера Radmir MTA  #2</div>               
                 </div>
         </div>
 </div>
@@ -3684,6 +3684,19 @@
         {
         if (screen.width < 960) document.write('<script type="text/javascript" src="js/map/buttonmobile.js" ></sc' + 'ript>');
         }
+    </script>
+
+<script type="text/javascript" src="/scripts/jquery.hcsticky-min.js"></script>
+<script type="text/javascript">
+        function execute(settings) {
+            $('.topMenu').hcSticky(settings);
+        }
+        $(document).ready(function(){
+            var height = 300;
+            if (top === self) {
+                execute({noContainer: true,top:100,bottomEnd:height});
+            }
+        }); 
     </script>
 
 </body></html>
